force-app/main/default/objects/Contract/fields/AVA_SFCPQ__Commit_Tax__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Commit_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to commit document to Avalara AvaTax Dashboard</description>
    <label>Commit Tax(Deprecated)</label>
    <type>Checkbox</type>
</CustomField>