force-app/main/default/objects/Contract/fields/AVA_SFCPQ__Document_Id__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Document_Id__c</fullName>
    <label>Document ID(Deprecated)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>