force-app/main/default/objects/Contract/fields/AVA_SFCPQ__Is_Seller_Importer_Of_Record__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Is_Seller_Importer_Of_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable / Disable seller importer of records.</description>
    <inlineHelpText>Enable / Disable seller importer of records.</inlineHelpText>
    <label>Is Seller Importer Of Record</label>
    <type>Checkbox</type>
</CustomField>