force-app/main/default/objects/Contract/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <formula>IF(ISBLANK( SBQQ__Opportunity__c ) ,
TEXT( SBQQ__RenewalOpportunity__r.Type ),
TEXT(SBQQ__Opportunity__r.Type) 
)</formula>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>